# gaza-archive

./: .env  .env.backend.example  .env.example  .gitignore  Dockerfile  Dockerfile.build  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/gaza_archive/: __main__.py  app.py  config.py  loop.py
backend/gaza_archive/client/: __init__.py  downloader.py  mastodon.py  suspension_checker.py
backend/gaza_archive/client/bots/: __init__.py
backend/gaza_archive/client/bots/accounts/: __init__.py
backend/gaza_archive/client/bots/campaigns/: __init__.py
backend/gaza_archive/client/sources/: __init__.py  _base.py  gaza_verified.py  molly_shah.py
backend/gaza_archive/client/sources/campaigns/: __init__.py  _parser.py  _source.py  chuffed.py  gfm.py  steunactie.py
backend/gaza_archive/db/: __init__.py  _accounts.py  _bots.py  _campaigns.py  _currency.py  _db.py  _media.py  _model.py  _posts.py  _suspension.py
backend/gaza_archive/model/: __init__.py  _api.py  _base.py  account.py  bot.py  campaign.py  media.py  post.py  suspension.py
backend/gaza_archive/scrapers/: __init__.py  mastodon.py
backend/gaza_archive/server/: __init__.py  _app.py  _ctx.py  feeds.py
backend/gaza_archive/server/_routes/: __init__.py  _accounts.py  _campaigns.py  _internal.py  _media.py  _posts.py
backend/gaza_archive/server/templates/: index.html
backend/gaza_archive/storages/: _base.py  file.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
gaza_archive/: __main__.py  config.py  (+1 more)
(+57 files in other folders)
