[project]
name = "gaza-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"beautifulsoup4>=4.14.2",
	"fastapi[standard]>=0.122.0",
	"jinja2>=3.1.6",
	"pydantic>=2.12.4",
	"requests>=2.32.5",
	"sqlalchemy>=2.0.44",
	"uvicorn>=0.38.0",
]

[dependency-groups]
security-requirements = [
	# keep this comment to ensure nice auto-formatting
	"pip>=25.3",
	"requests>=2.32.4",
	"urllib3>=2.5.0",
]
dev = [
	# keep this comment to ensure nice auto-formatting
	"pip-audit",
	"ruff",
	"ty",
]

[tool.uv]
default-groups = [
	# keep this comment to ensure nice auto-formatting
	"security-requirements",
	"dev",
]
